Add mean and total scores for both databases

--- a/public/index.html
+++ b/public/index.html
@@ -8,74 +8,5 @@
 <body>
   <div id="app">
   </div>
-  <script>
-    const app = {}
-
-    // API for the microservices running the database tests
-    const api = axios.create({
-      baseURL: 'http://localhost:3000',
-      timeout: 1000
-    })
-
-    app.tests = function (data) {
-      this.description = m.prop(data.description)
-      this.done = m.prop(false)
-    }
-
-    app.testList = Array
-
-    app.vm = (function () {
-      const vm = {}
-
-      vm.init = function () {
-
-        vm.list = new app.testList()
-
-        //adds a app to the list, and clears the description field for user convenience
-        vm.add = function () {
-          api.get('/redis', {
-            params: {
-              iter: 10
-            }
-          }).then(function (response) {
-
-            console.log(response.data)
-
-            vm.list.push({
-              description: response.data
-            })
-
-          }).catch(function (error) {
-            console.log(error)
-          })
-        }
-
-      }
-      return vm
-    }())
-
-    app.controller = function () {
-      app.vm.init()
-    }
-
-    //here's the view
-    app.view = function () {
-      return [
-        m("button", {
-          onclick: app.vm.add
-        }, "Run tests!"),
-        m("table", [
-          app.vm.list.map(function (test, index) {
-            return m("p", `${test.description} ms`)
-          })
-        ])
-      ]
-    }
-
-    //initialize the application
-    m.mount(document.body, {
-      controller: app.controller,
-      view: app.view
-    })
-  </script>
+  <script src="app.js"></script>
 </body>
