--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <script src="mithril.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <link href="style.css" rel="stylesheet"/>
 </head>
 
 <body>
